fix(FieldError): fix field error alignment

--- a/packages/components/src/components/FieldError/FieldError.module.scss
+++ b/packages/components/src/components/FieldError/FieldError.module.scss
@@ -4,4 +4,5 @@
   display: flex;
   align-items: center;
   column-gap: var(--field-error--spacing);
+  align-self: start;
 }
